<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_weight="1"
    android:layout_marginBottom="@dimen/baseMargin"
    android:background="@drawable/block_rounded_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/baseMargin"
        android:text="@string/bayer_information"
        android:textColor="#000000"
        android:textSize="24sp">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/baseMargin"
        android:layout_marginTop="@dimen/itemVerticalMargin"
        android:layout_marginEnd="@dimen/baseMargin"
        android:layout_marginBottom="@dimen/itemVerticalMargin"
        android:background="@drawable/grey_rounded_background"
        android:hint="@string/phone_number"
        app:hintTextColor="#000000"

        android:textColor="#000000"
        android:padding="8dp"
        android:textSize="20sp"
       >

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/phoneEditText"
            android:inputType="phone|textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefixText="+7"

            android:maxLength="18"
            android:background="@null"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/baseMargin"
        android:layout_marginTop="@dimen/itemVerticalMargin"
        android:layout_marginEnd="@dimen/baseMargin"
        android:layout_marginBottom="@dimen/itemVerticalMargin"
        android:background="@drawable/grey_rounded_background"
        android:hint="@string/mail"
        app:hintTextColor="#000000"
        android:textColor="#000000"
        android:padding="8dp"
        android:textSize="20sp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mailEditText"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/baseMargin"
        android:text="@string/confidential_information"
        android:textSize="14sp"
        >

    </TextView>

    </LinearLayout>
