<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="1"
    android:layout_marginBottom="@dimen/baseMargin"
    android:background="@drawable/white_rounded_background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:paddingTop="8dp"
        android:paddingBottom="8dp"


        android:orientation="horizontal">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_gravity="center"
            android:layout_marginStart="@dimen/baseMargin"



            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="@dimen/baseMargin"
                android:textColor="#000000"
                android:text="@string/tourist_info"
                android:textSize="22sp">

            </TextView>


        </LinearLayout>
        <ImageView
            android:id="@+id/image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|end"

            android:background="@drawable/lightblue_button_background"


            android:layout_marginEnd="@dimen/baseMargin"

            >
        </ImageView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/allFieldsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/baseMargin"
        android:layout_marginTop="@dimen/itemVerticalMargin"
        android:layout_marginEnd="@dimen/baseMargin"
        android:layout_marginBottom="@dimen/itemVerticalMargin"
        android:background="@drawable/grey_rounded_background"
        android:hint="@string/firstname"
        app:hintTextColor="#000000"
        android:textColor="#000000"
        android:padding="8dp"
        android:textSize="20sp"
        >

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/firstNameEditText"
        android:inputType="text|textNoSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/baseMargin"
        android:layout_marginTop="@dimen/itemVerticalMargin"
        android:layout_marginEnd="@dimen/baseMargin"
        android:layout_marginBottom="@dimen/itemVerticalMargin"
        android:background="@drawable/grey_rounded_background"
        android:hint="@string/lastname"
        app:hintTextColor="#000000"
        android:textColor="#000000"
        android:padding="8dp"
        android:textSize="20sp"
        >


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/lastNameEditText"
            android:inputType="text|textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthDayTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/baseMargin"
        android:layout_marginTop="@dimen/itemVerticalMargin"
        android:layout_marginEnd="@dimen/baseMargin"
        android:layout_marginBottom="@dimen/itemVerticalMargin"
        android:background="@drawable/grey_rounded_background"
        android:hint="@string/birth_day"
        app:hintTextColor="#000000"
        android:textColor="#000000"
        android:padding="8dp"
        android:textSize="20sp"
        >


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/birthDayEditText"
            android:inputType="date"
            android:digits="1234567890.+"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/citizenTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/baseMargin"
        android:layout_marginTop="@dimen/itemVerticalMargin"
        android:layout_marginEnd="@dimen/baseMargin"
        android:layout_marginBottom="@dimen/itemVerticalMargin"
        android:background="@drawable/grey_rounded_background"
        android:hint="@string/citizenship"
        app:hintTextColor="#000000"
        android:textColor="#000000"
        android:padding="8dp"
        android:textSize="20sp"
        >


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/citizenshipEditText"
            android:inputType="date|textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passportTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/baseMargin"
        android:layout_marginTop="@dimen/itemVerticalMargin"
        android:layout_marginEnd="@dimen/baseMargin"
        android:layout_marginBottom="@dimen/itemVerticalMargin"
        android:background="@drawable/grey_rounded_background"
        android:hint="@string/passport"
        app:hintTextColor="#000000"
        android:textColor="#000000"
        android:padding="8dp"
        android:textSize="20sp"
        >


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/passportEditText"
            android:inputType="text|textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passportEndDateTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/baseMargin"
        android:layout_marginTop="@dimen/itemVerticalMargin"
        android:layout_marginEnd="@dimen/baseMargin"
        android:layout_marginBottom="@dimen/itemVerticalMargin"
        android:background="@drawable/grey_rounded_background"
        android:hint="@string/passport_end_date"
        app:hintTextColor="#000000"
        android:textColor="#000000"
        android:padding="8dp"
        android:textSize="20sp"
        >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/passportEndDateEditText"
            android:inputType="text|textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"/>

    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    </LinearLayout>
