<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/baseMargin"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            android:background="@drawable/block_rounded_background"
            android:orientation="vertical">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/baseMargin">
                        <TableRow>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="12dp"
                                    android:layout_weight="0"
                                    android:text="@string/tour"
                                    android:layout_marginEnd="@dimen/baseMargin"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/tourPrice"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="12dp"
                                    android:textAlignment="textEnd"
                                    android:layout_weight="1"
                                    android:textColor="#000000"
                                    android:textSize="20sp" />
                        </TableRow>
                        <TableRow>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="12dp"
                                    android:layout_weight="0"
                                    android:text="@string/fuel_charge"
                                    android:layout_marginEnd="@dimen/baseMargin"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/fuelCharge"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="textEnd"
                                    android:layout_marginBottom="12dp"
                                    android:textColor="#000000"
                                    android:textSize="20sp"/>
                        </TableRow>
                        <TableRow>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="12dp"
                                    android:layout_weight="0"
                                    android:layout_marginEnd="@dimen/baseMargin"
                                    android:text="@string/service_charge"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/serviceCharge"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="12dp"
                                    android:textAlignment="textEnd"
                                    android:textColor="#000000"
                                    android:textSize="20sp"/>

                        </TableRow>

                        <TableRow>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="12dp"
                                    android:layout_weight="0"
                                    android:layout_marginEnd="@dimen/baseMargin"
                                    android:text="@string/to_pay"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/toPay"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="12dp"
                                    android:textAlignment="textEnd"
                                    android:textColor="#0D72FF"
                                    android:textSize="20sp"/>

                        </TableRow>
                </TableLayout>

        <include layout="@layout/rounded_button_view"
                android:id="@+id/payButton"/>

        </LinearLayout>



</LinearLayout>
